feat: add navigation to drafts and update icons in editor

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -145,6 +145,10 @@
         <mat-icon>article</mat-icon>
         <span>Write Article</span>
       </button>
+      <button mat-menu-item routerLink="/drafts">
+        <mat-icon>edit_document</mat-icon>
+        <span>Drafts</span>
+      </button>
       <button mat-menu-item (click)="layout.uploadMedia()">
         <mat-icon>upload</mat-icon>
         <span>Upload</span>
