--- a/src/app/pages/article/editor/editor.component.html
+++ b/src/app/pages/article/editor/editor.component.html
@@ -7,7 +7,7 @@
   }
   
   <button mat-icon-button (click)="navigateToDrafts()" matTooltip="View all drafts">
-    <mat-icon>draft</mat-icon>
+    <mat-icon>edit_document</mat-icon>
   </button>
   
   <button mat-button (click)="cancel()" [disabled]="isPublishing()">
