--- a/src/app/pages/drafts/drafts.component.html
+++ b/src/app/pages/drafts/drafts.component.html
@@ -2,7 +2,7 @@
   <div class="drafts-header">
     <div class="header-content">
       <h1>
-        <mat-icon>draft</mat-icon>
+        <mat-icon>edit_document</mat-icon>
         My Drafts
       </h1>
       <div class="header-actions">
