feat: enhance draft validation and improve auto-save handling in editor

--- a/src/app/pages/article/editor/editor.component.html
+++ b/src/app/pages/article/editor/editor.component.html
@@ -15,7 +15,7 @@
     Cancel
   </button>
   
-  <button mat-button (click)="saveDraft()" [disabled]="!isValid() || isPublishing()">
+  <button mat-button (click)="saveDraft()" [disabled]="!isDraftValid() || isPublishing()">
     <mat-icon>save</mat-icon>
     Save Draft
   </button>
