--- a/src/app/pages/event/event.component.html
+++ b/src/app/pages/event/event.component.html
@@ -4,34 +4,39 @@
 
 <div class="reactions">
   @for (reaction of reactions(); track reaction.emoji) {
-    <div class="reaction">
-      <span class="emoji">{{ reaction.emoji }}</span>
-      <span class="count">{{ reaction.count }}</span>
-    </div>
+  <div class="reaction">
+    <span class="emoji">{{ reaction.emoji }}</span>
+    <span class="count">{{ reaction.count }}</span>
+  </div>
   }
 </div>
 
 @if (app.enabledFeature('beta')) {
-  @if (reposts()) {
-    <button matButton (click)="repostNote()">
-      <mat-icon>repeat</mat-icon>
-      <span>{{ reposts().length }}</span>
-    </button>
-  }
+@if (reposts()) {
+<button matButton (click)="repostNote()">
+  <mat-icon>repeat</mat-icon>
+  <span>{{ reposts().length }}</span>
+</button>
+}
 }
 
+<button matButton (click)="layout.commentNote(event()?.id)">
+  <mat-icon>comment</mat-icon>
+  <span>Comment</span>
+</button>
+
+<app-note-editor-dialog></app-note-editor-dialog>
+
 @if (error()) {
-  <div class="warn">
-    {{ error() }}
-  </div>
+<div class="warn">
+  {{ error() }}
+</div>
 }
 
 <div class="replies-section">
   @for (threadedEvent of threadedReplies(); track threadedEvent.event.id) {
-    <ng-container
-      [ngTemplateOutlet]="replyTemplate"
-      [ngTemplateOutletContext]="{ threadedEvent: threadedEvent }"
-    ></ng-container>
+  <ng-container [ngTemplateOutlet]="replyTemplate"
+    [ngTemplateOutletContext]="{ threadedEvent: threadedEvent }"></ng-container>
   }
 </div>
 
@@ -40,26 +45,17 @@
     <app-event [event]="threadedEvent.event"></app-event>
 
     @for (childReply of threadedEvent.replies; track childReply.event.id) {
-      <ng-container
-        [ngTemplateOutlet]="replyTemplate"
-        [ngTemplateOutletContext]="{ threadedEvent: childReply }"
-      ></ng-container>
+    <ng-container [ngTemplateOutlet]="replyTemplate"
+      [ngTemplateOutletContext]="{ threadedEvent: childReply }"></ng-container>
     }
 
     @if (threadedEvent.hasMoreReplies && threadedEvent.deepestReplyId) {
-      <div
-        class="view-more-replies"
-        [style.margin-left.px]="(threadedEvent.level + 1) * 24"
-      >
-        <button
-          mat-stroked-button
-          class="view-more-button"
-          (click)="onViewMoreReplies(threadedEvent.deepestReplyId!)"
-        >
-          <mat-icon>expand_more</mat-icon>
-          View more replies
-        </button>
-      </div>
+    <div class="view-more-replies" [style.margin-left.px]="(threadedEvent.level + 1) * 24">
+      <button mat-stroked-button class="view-more-button" (click)="onViewMoreReplies(threadedEvent.deepestReplyId!)">
+        <mat-icon>expand_more</mat-icon>
+        View more replies
+      </button>
+    </div>
     }
   </div>
 </ng-template>
