Remove the note-editor-dialog temporarily. It complains about dialog injection issue. The content of the dialog must be turned into a component first.

--- a/src/app/pages/event/event.component.html
+++ b/src/app/pages/event/event.component.html
@@ -25,7 +25,7 @@
   <span>Comment</span>
 </button>
 
-<app-note-editor-dialog></app-note-editor-dialog>
+<!-- <app-note-editor-dialog></app-note-editor-dialog> -->
 
 @if (error()) {
 <div class="warn">
